--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
-  ]
+  ],
+   "builds": [
+    { "src": "package.json", "use": "@vercel/static-build" }
+  ],
+  "scripts": {
+    "build": "npm run build"
+  }
 }
