--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ],
-   "builds": [
+  "builds": [
     { "src": "package.json", "use": "@vercel/static-build" }
   ],
-  "scripts": {
-    "build": "npm run build"
-  }
+  "routes": [
+    { "src": "/(.*)", "dest": "/" }
+  ]
 }
